--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,12 @@ gradle.ext.targetSdkVersion = 29
 gradle.ext.versionCode = 1
 gradle.ext.versionName = '1.0'
 
+// maven url
+gradle.ext.maveUrlSnapshot = System.getProperty("user.dir") + "/AppRespository/SNAPSHOT"
+gradle.ext.maveUrlRelease = System.getProperty("user.home") + "/AppRespository/RELEASE"
+gradle.ext.maveGroupId = "com.base.library"
+gradle.ext.mavePublishingRelease = false
+
 // androidx library
 gradle.ext.androidxJunit = "4.12"
 gradle.ext.androidxTestJunit = "1.1.1"
@@ -20,3 +26,4 @@ gradle.ext.androidxViewPager2 = "1.1.0-alpha01"
 
 rootProject.name='AppModules'
 include ':app'
+include ':SM-ShoppingCart'
