--- a/config/module.gradle
+++ b/config/module.gradle
@@ -18,4 +18,6 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+    // 打包时不生成BuildConfig文件
+    packageBuildConfig(false)
 }
