--- a/settings.gradle
+++ b/settings.gradle
@@ -11,7 +11,7 @@ gradle.ext.versionName = '1.0'
 // maven url
 gradle.ext.maveUrlSnapshot = System.getProperty("user.dir") + "/AppRespository/SNAPSHOT"
 gradle.ext.maveUrlRelease = System.getProperty("user.home") + "/AppRespository/RELEASE"
-gradle.ext.maveGroupId = "com.base.library"
+gradle.ext.maveGroupId = "com.base.module"
 gradle.ext.mavePublishingRelease = false
 
 // androidx library
@@ -23,6 +23,10 @@ gradle.ext.androidxAppcompat = "1.1.0"
 gradle.ext.androidxConstraintlayout = "1.1.3"
 gradle.ext.androidxRecyclerView = "1.2.0-alpha03"
 gradle.ext.androidxViewPager2 = "1.1.0-alpha01"
+
+// com.base.library
+gradle.ext.appLibraryFont = "1.0.0-release"
+gradle.ext.appLibraryValues = "1.0.0-release"
 
 rootProject.name='AppModules'
 include ':app'
