--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,18 @@ allprojects {
     }
 }
 
+/**
+ * 手动添加dependencies下的依赖到pom文件中
+ */
+def addPomDependencies(it, dependenciesNode) {
+    def dependencyNode = dependenciesNode.appendNode('dependency')
+
+    dependencyNode.appendNode('groupId', it.group)
+    dependencyNode.appendNode('artifactId', it.name)
+    dependencyNode.appendNode('version', it.version)
+    dependencyNode.appendNode('scope', 'implementation')
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
