--- a/SM-Home/src/main/AndroidManifest.xml
+++ b/SM-Home/src/main/AndroidManifest.xml
@@ -1,2 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.base.module.home" />
+    package="com.base.module.home">
+
+    <application
+        android:allowBackup="true"
+        android:supportsRtl="true">
+
+        <activity android:name="com.base.module.home.AppHomeActivity" />
+    </application>
+</manifest>
