--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,16 @@ dependencies {
     implementation "androidx.appcompat:appcompat:${gradle.androidxAppcompat}"
     implementation "androidx.constraintlayout:constraintlayout:${gradle.androidxConstraintlayout}"
 
+    implementation "com.base.library:font:${gradle.appLibraryFont}"
+    implementation "com.base.library:values:${gradle.appLibraryValues}"
+
     testImplementation "junit:junit:${gradle.androidxJunit}"
     androidTestImplementation "androidx.test.ext:junit:${gradle.androidxTestJunit}"
     androidTestImplementation "androidx.test.espresso:espresso-core:${gradle.androidxTestEspresso}"
 
     implementation project(path: ':SM-Drawables')
+    implementation project(path: ':SM-Login')
+    implementation project(path: ':SM-Orders')
+    implementation project(path: ':SM-Home')
+    implementation project(path: ':SM-ShoppingCart')
 }
